--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "magnific-popup": "^1.1.0",
-    "mixitup": "^3.3.1"
+    "mixitup": "^3.3.1",
+    "rateyo": "^3.0.0-alpha.2"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
